--- a/Madii_practice_2.html
+++ b/Madii_practice_2.html
@@ -23,6 +23,18 @@
             <br>
             <br>
             <b>Have a great day!</b>
+            <br><br>
+            <video width="320" height="240" controls>
+                <source src="movie.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+              </video>
+              <br><br>
+              <audio controls>
+                <source src="Abundance.mp3" type="audio/mpeg">
+                Your browser does not support the audio tag.
+              </audio>
+              
         </body>
     </head>
 </html>
