--- a/html site/index.html
+++ b/html site/index.html
@@ -3,6 +3,17 @@
     <head>
         <meta charset="utf-8"> 
         <title>HTML Website</title>
-        <link rel="" href="">
+        <link rel="icon" type="image/png" href="imges/favicon-16x16.png">
+        <meta name="keywords" content="html, symantics tags, artical">
+        <meta name="author" content="Abed Al Qader Madi">
+        <meta name="viewport" content="width-device-width, initial-sacle=1.0">
     </head>
+    <body>
+        <header>
+            <center><h1>HTML Essential Training </h1></center>
+            <nav>
+                <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >Introduction to HTML</a>
+            </nav>
+        </header>
+    </body>
 </html>
