--- a/html site/index.html
+++ b/html site/index.html
@@ -11,9 +11,24 @@
     <body>
         <header>
             <center><h1>HTML Essential Training </h1></center>
-            <nav>
-                <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >Introduction to HTML</a>
-            </nav>
+       <center>
+        <nav>
+            <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >Introduction to HTML</a>
+          &nbsp;&nbsp;
+            <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >HTML syntax </a>
+            &nbsp;&nbsp;
+            <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >Structuring pages </a>
+            &nbsp;&nbsp;
+            <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >Creating links </a>
+            &nbsp;&nbsp;
+            <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >HTML reference </a>
+            &nbsp;&nbsp;
+            <a href="https://www.w3schools.com/html/html_intro.asp" target="blank" >Next steps </a>
+            &nbsp;&nbsp;
+
+        </nav>
+       </center>
+       <img src="" alt="">
         </header>
     </body>
 </html>
