--- a/html site/index.html
+++ b/html site/index.html
@@ -28,7 +28,7 @@
 
         </nav>
        </center>
-       <img src="" alt="">
+       <img src="imges/slider1.jpg" alt="">
         </header>
     </body>
 </html>
