--- a/html site/index.html
+++ b/html site/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"> 
         <title>HTML Website</title>
-        <link rel="icon" type="image/png" href="imges/favicon-16x16.png">
+        <link rel="icon" type="image/png" href="images/favicon-16x16.png">
         <meta name="keywords" content="html, symantics tags, artical">
         <meta name="author" content="Abed Al Qader Madi">
         <meta name="viewport" content="width-device-width, initial-sacle=1.0">
@@ -28,7 +28,7 @@
 
         </nav>
        </center>
-       <img src="imges/slider1.jpg" alt="">
+       <img src="images/slider1.jpg">
         </header>
     </body>
 </html>
