--- a/html site/index.html
+++ b/html site/index.html
@@ -28,7 +28,60 @@
 
         </nav>
        </center>
-       <img src="images/slider1.jpg">
+       <br>
+       <br>
+       <center><img src="images/slider1.jpg"></center>>
+       <main>
+           <section>
+               <h2>Conveying meaning through structure </h2>
+               <p>
+                Creating properly structured pages is the foundation of any good website. A solid semantic structure allows you to convey meaning and properly represent content types through nothing more than the page's markup. This, in turn, makes your content more accessible, easier to index and search, and makes it easier to repurpose. Remember that there are a lot of different devices, robots, and other user agents that will be reading your code. Without a consistent, semantic structure your site will be less effective. 
+               </p>
+           </section>
+           <section>
+               <h2>Sectioning elements</h2>
+               <p>
+                One way to add meaning to your content is to organize them into sections that convey meaning and structure. For example it's pretty standard to contain introductory information within a section, page navigation within its own area, the page's main content in its own region, and related information within a sidebar. HTML contains numerous elements that are designed to assist in the logical structuring and semantics of page content. 
+               </p>
+               <p>
+                In previous versions of HTML creating new sections of content was done almost exclusively through the use of heading tags, with divs being used to group areas of content together. Class or ID attributes would allow designers to attach more semantic meaning to the groups, although this meant little to most user agents. In HTML5 new sectioning and semantic elements were introduced to help represent commonly used sections and create more consistent page structures. Tags like the aside, article, footer, header, main, nav, and section allow authors to identify common page regions and convey more semantic meaning. 
+               </p>
+               <p>
+                Although some of these elements are very specific, in many cases which element you'll use and how you'll structure them is very much a judgment call. Make sure, however, that your finished structure represents the desired document outline. 
+            </p>
+            <p>
+                Learn more about the new sectioning and semantic elements: 
+            </p>
+              
+               <ul>
+                   <li>
+                    aside 
+                   </li>
+                   <li>
+                    article 
+                   </li>
+                   <li>
+                    footer 
+                   </li>
+                   <li>
+                    header 
+                   </li>
+                   <li>
+                    main 
+                   </li>
+                   <li>
+                    nav 
+                   </li>
+                   <li>
+                    section 
+                   </li>
+
+               </ul>
+           </section>
+           <section>
+
+           </section>
+       </main>
         </header>
     </body>
 </html>
