--- a/html site/index.html
+++ b/html site/index.html
@@ -99,7 +99,11 @@
            </section>
            <section>
                <h2>WAI-ARIA Roles</h2>
-           </section>
+               <p>
+                Carefully structuring an HTML page is the first step into ensuring that the content is accessible to all users. You should also use WAI-ARIA role attributes where appropriate to increase accessibility and improve semantics. WAI-ARIA is short for the Web Accessibility Initiative's Accessible Rich Internet Application specification. The roles attribute attempts to identify content and its capabilities by assigning it to a predefined role. This helps assistive devices understand what the content is, how it relates to other content, and how the content can be interacted with. The W3C has a <a href="https://www.w3.org/TR/2014/WD-aria-in-html-20140626/" target="blank"> fantastic resource </a>  on how WAI-ARIA works and how it should be used with HTML. 
+               </p>
+
+           
        </main>
         </header>
     </body>
