--- a/html site/index.html
+++ b/html site/index.html
@@ -7,8 +7,10 @@
         <meta name="keywords" content="html, symantics tags, artical">
         <meta name="author" content="Abed Al Qader Madi">
         <meta name="viewport" content="width-device-width, initial-sacle=1.0">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+       
         <header>
             <center><h1>HTML Essential Training </h1></center>
        <center>
