--- a/html site/index.html
+++ b/html site/index.html
@@ -7,7 +7,11 @@
         <meta name="keywords" content="html, symantics tags, artical">
         <meta name="author" content="Abed Al Qader Madi">
         <meta name="viewport" content="width-device-width, initial-sacle=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="CSS/style.css">
+   
+}
+
+        </style>
     </head>
     <body>
        
