--- a/Coffee_House/Coffe_House.html
+++ b/Coffee_House/Coffe_House.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> Madii's Coffee House </title>
 <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
