--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title> Madii's Coffee House </title>
+    <link rel="icon" type="image/png" href="Images/Logo.jpg">
 <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
+
+  
 
 <video autoplay muted loop id="myVideo">
   <source src="video/MyVideo_Madii.mp4" type="video/mp4">
