--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width-device-width, initial-sacle=1.0">
     <title> Madii's Coffee House </title>
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
 <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
+ 
+<header class="header">
 
-  
+  <a href="#" class="logo">
+      <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
+  </a>
 
-<video autoplay muted loop id="myVideo">
-  <source src="video/MyVideo_Madii.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
+  <nav class="navbar">
+      <a href="#home">home</a>
+      <a href="#about">about</a>
+      <a href="#menu">menu</a>
+      <a href="#products">products</a>
+      <a href="#contact">contact</a>
+     
+  </nav>
 
-
-
+  <div class="icons">
+      <div class="fa fa-search" id="search-btn"></div>
+      <div class="fa fa-shopping-cart" id="cart-btn"></div>
+      <div class="fa fa-bars" id="menu-btn"></div>
+  </div>
+</header> 
 
 </body>
 </html>
