--- a/html site/index.html
+++ b/html site/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <meta charset="utf-8"> 
         <title>HTML Website</title>
         <link rel="icon" type="image/png" href="images/favicon-16x16.png">
@@ -14,7 +15,11 @@
         </style>
     </head>
     <body>
-       
+        <style>
+            p {
+              border: 7px solid rgba(194, 139, 37, 0.548);
+            }
+            </style>
         <header>
             <center><h1>HTML Essential Training </h1></center>
        <center>
