--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -7,6 +7,7 @@
     <title> Madii's Coffee House </title>
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
 <link rel="stylesheet" href="CSS/Style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
  
@@ -26,10 +27,10 @@
   </nav>
 
   <div class="icons">
-      <div class="fa fa-search" id="search-btn"></div>
-      <div class="fa fa-shopping-cart" id="cart-btn"></div>
-      <div class="fa fa-bars" id="menu-btn"></div>
-  </div>
+    <div class="fas fa-search" id="search-btn"></div>
+    <div class="fas fa-shopping-cart" id="cart-btn"></div>
+    <div class="fas fa-bars" id="menu-btn"></div>
+</div>
 </header> 
 
 </body>
