--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -31,6 +31,10 @@
     <div class="fas fa-shopping-cart" id="cart-btn"></div>
     <div class="fas fa-bars" id="menu-btn"></div>
 </div>
+  <div class="Search-box">
+<input type="Search" id="search">
+<label for="search" class="fas fa-search"></label>
+  </div>
 </header> 
 
 </body>
