--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -35,7 +35,8 @@
 <input type="Search" id="search">
 <label for="search" class="fas fa-search"></label>
   </div>
-</header> 
 
+</header> 
+<img src="Images/home page.jpg" alt="home_page" >
 </body>
 </html>
