--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
 <link rel="stylesheet" href="CSS/Style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<script src="JS/Script.js"></script>
 </head>
 <body>
  
@@ -31,10 +32,10 @@
     <div class="fas fa-shopping-cart" id="cart-btn"></div>
     <div class="fas fa-bars" id="menu-btn"></div>
 </div>
-  <div class="Search-box">
-<input type="Search" id="search">
-<label for="search" class="fas fa-search"></label>
-  </div>
+<div class="Search-box">
+  <input type="search" id="search-box">
+  <label for="search-box" class="fas fa-search"></label>
+</div>
 
 </header> 
 
