--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -27,6 +27,8 @@
      
   </nav>
 
+ 
+
   <div class="icons">
     <div class="fas fa-search" id="search-btn"></div>
     <div class="fas fa-shopping-cart" id="cart-btn"></div>
@@ -38,6 +40,15 @@
 </div>
 
 </header> 
+<section class="home-page">
+  <div class="content">
+    <h3>THE FRESHEST COFFEE IN TWON </h3>
+    <a href="#" class="btn"> get yours now </a>
+  </div>
+
+</section>
+
+
 
 <script src="JS/Script.js"></script>
 
