--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -39,6 +39,8 @@
   <label for="search-box" class="fas fa-search"></label>
 </div>
 
+
+
 </header> 
 <section class="home-page">
   <div class="content">
@@ -46,6 +48,45 @@
     <a href="#" class="btn"> get yours now </a>
   </div>
 
+</section>
+
+<!--menu section-->
+<section class="menu-section" id="menu-section">
+<h1 class="heading">Menu</h1>
+
+<div class = "box-contanier">
+  <div class="box">
+    <img src="/Coffee_House/Images/american-coffee.jpg" alt="" width="100px" height="100px">
+    <h3> AMERICAN COFFEE </h3>
+    <a href="#" class="btn">ADD TO CART</a>
+  </div>
+  <div class="box">
+    <img src="/Coffee_House/Images/caramel macchiato.jpg" alt="" width="100px" height="100px">
+    <h3> CARAMEL MACCHIATO </h3>
+    <a href="#" class="btn">ADD TO CART</a>
+
+  </div>
+  <div class="box">
+    <img src="/Coffee_House/Images/Iced-Spanish-Latte.png" alt="" width="100px" height="100px">
+    <h3> ICED SPANISH LATTE</h3>
+    <a href="#" class="btn">ADD TO CART</a>
+  </div>
+  <div class="box">
+    <img src="/Coffee_House/Images/Spanish-Latte.jpg" alt="" width="100px" height="100px">
+    <h3> SPANISH LATTE </h3>
+    <a href="#" class="btn">ADD TO CART</a>
+  </div>
+  <div class="box">
+    <img src="/Coffee_House/Images/turkish-coffee.jpg" alt="" width="100px" height="100px">
+    <h3> TURKISH COFFEE </h3>
+    <a href="#" class="btn">ADD TO CART</a>
+  </div>
+  <div class="box">
+    <img src="/Coffee_House/Images/white mocha.jpg" alt="" width="100px" height="100px">
+    <h3> WHITE MOCHA </h3>
+    <a href="#" class="btn">ADD TO CART</a>
+  </div>
+</div>
 </section>
 
 
