--- a/grid/7. grid column row.html
+++ b/grid/7. grid column row.html
@@ -19,8 +19,9 @@
 			#area3{grid-column: 2/3}
 			#area4{grid-column: 2/3}
 			#area5{grid-column: 3/4;grid-row: 2/5}
-			#area6{grid-column: 1/3}
-			#area7{grid-column: 1/4}
+			#area6{grid-column: 3/5}
+			#area7{grid-column: 3/4}
+			#area8{grid-column: 1/4;}
 		</style>
 	</head>
 	<body>
@@ -32,6 +33,7 @@
 			<div class='item' id='area5'>div 5</div>
 			<div class='item' id='area6'>div 6</div>
 			<div class='item' id='area7'>div 7</div>
+			<div class="item" id="area8">div 8</div>
 		</div>
 	</body>
 </html>
