--- a/grid/8. grid-areas.html
+++ b/grid/8. grid-areas.html
@@ -6,15 +6,15 @@
 				display: grid;
 				background-color: orange;
 				grid-template-areas: 
-				"header header header"
+				"header header links links "
 				"links posts Ads"
 				"links friends Ads"
 				"pages pages Ads"
 				"footer footer footer"
 				;
-				grid-row-gap:  20px;
-				grid-column-gap:  10px;
-			}
+				grid-row-gap:  0;
+				grid-column-gap:  0
+					}
 			#area1{grid-area: header;}
 			#area2{grid-area: links;}
 			#area3{grid-area: posts;}
@@ -38,6 +38,7 @@
 			<div class='item' id='area5'>div 5</div>
 			<div class='item' id='area6'>div 6</div>
 			<div class='item' id='area7'>div 7</div>
+			 <div class="item" id="area8"> div 8</div>
 		</div>
 	</body>
 </html>
