--- a/grid/7. grid column row.html
+++ b/grid/7. grid column row.html
@@ -3,24 +3,33 @@
 	<head>
 		<style>
 			#container{
-				background-color: orange;
+				
 				display: grid;
-				grid-template-columns: auto auto auto;
-				grid-row-gap: 20px;
-				grid-column-gap: 10px;
+				grid-template-columns: auto auto auto auto ;
+				grid-row-gap: 0;
+				grid-column-gap: 0;
 			}
 			.item{
-				border: 3px red solid;
-				font-size: 2em;
+				border: 3px ;
+				font-size: 50px;
 				text-align: center;
 			}
-			#area1{grid-column: 1/4}
-			#area2{grid-row: 2/4}
-			#area3{grid-column: 2/3}
-			#area4{grid-column: 2/3}
-			#area5{grid-column: 3/4;grid-row: 2/5}
-			#area6{grid-column: 1/3}
-			#area7{grid-column: 1/4}
+			#area1{grid-area: 1 / 1 / 2 / 3;
+			background-color: green;}
+			#area2{grid-area: 1 / 3 / 2 / 5;
+			background-color: orange;}
+			#area3{grid-area: 2 / 1 / 3 / 2;
+			background-color: lightblue;}
+			#area4{grid-area: 2 / 2 / 3 / 4;
+			background-color: burlywood}
+			#area5{grid-area: 2 / 4 / 3 / 5;
+			background-color:  brown}
+			#area6{grid-area: 3 / 1 / 4 / 4;
+			background-color: purple;}
+			#area7{grid-area: 3 / 4 / 4 / 5;
+			background-color: red;}
+			#area8{grid-area:4 / 1 / 5 / 5 ;
+			background-color: chartreuse;}
 		</style>
 	</head>
 	<body>
@@ -32,6 +41,7 @@
 			<div class='item' id='area5'>div 5</div>
 			<div class='item' id='area6'>div 6</div>
 			<div class='item' id='area7'>div 7</div>
+			<div class='item' id='area8'>div 8</div>
 		</div>
 	</body>
 </html>
