--- a/grid/madi-grid.html
+++ b/grid/madi-grid.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>madii grid</title>
-    <style>
-
-    </style>
-</head>
-<body>
-    
-</body>
+<html>
+	<head>
+		<style>
+			#container{
+				
+				display: grid;
+				grid-template-columns: auto auto auto auto ;
+				grid-row-gap: 0;
+				grid-column-gap: 0;
+			}
+			.item{
+				border: 3px ;
+				font-size: 50px;
+				text-align: center;
+			}
+			#area1{grid-area: 1 / 1 / 2 / 3;
+			background-color: green;}
+			#area2{grid-area: 1 / 3 / 2 / 5;
+			background-color: orange;}
+			#area3{grid-area: 2 / 1 / 3 / 2;
+			background-color: lightblue;}
+			#area4{grid-area: 2 / 2 / 3 / 4;
+			background-color: burlywood}
+			#area5{grid-area: 2 / 4 / 3 / 5;
+			background-color:  brown}
+			#area6{grid-area: 3 / 1 / 4 / 4;
+			background-color: purple;}
+			#area7{grid-area: 3 / 4 / 4 / 5;
+			background-color: red;}
+			#area8{grid-area:4 / 1 / 5 / 5 ;
+			background-color: chartreuse;}
+		</style>
+	</head>
+	<body>
+		<div id='container'>
+			<div class='item' id="area1">div 1</div>
+			<div class='item' id='area2'>div 2</div>
+			<div class='item' id='area3'>div 3</div>
+			<div class='item' id='area4'>div 4</div>
+			<div class='item' id='area5'>div 5</div>
+			<div class='item' id='area6'>div 6</div>
+			<div class='item' id='area7'>div 7</div>
+			<div class='item' id='area8'>div 8</div>
+		</div>
+	</body>
 </html>
