--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -27,19 +27,12 @@
      
   </nav>
 
- 
-
   <div class="icons">
-    <div class="fas fa-search" id="search-btn">
-      <a href="#"></a>
-    </div>
-    <a href="cart.html">
-    <div class="fas fa-shopping-cart" id="cart-btn">
-    </a>
-      <span>5</span>
-    </div>
+    <div class="fas fa-search" id="search-btn"></div>
+    <div class="fas fa-shopping-cart" id="cart-btn"></div>
     <div class="fas fa-bars" id="menu-btn"></div>
-</div>
+</div> 
+
 <div class="search-form">
   <input type="search" id="search-box">
   <label for="search-box" class="fas fa-search"></label>
