--- a/Coffee_House/cart.html
+++ b/Coffee_House/cart.html
@@ -29,20 +29,23 @@
  
 
   <div class="icons">
-    <div class="fas fa-search" id="search-btn">
-      <a href="#"></a>
-    </div>
-    <a href="/Coffee_House/cart.html">
-    <div class="fas fa-shopping-cart" id="cart-btn">
-    </a>
-      
-    </div>
-    <div class="fas fa-bars" id="menu-btn"></div>
-</div>
+    
+    <div class="fas fa-search" id="search-btn"></div> 
+  <div class="cart"> 
+    <a href="cart.html">
+    <div class="fas fa-shopping-cart" id="cart-btn"></div>
+    <span>0</span>
+  </a>
+  </div>
+  
+  <div class="fas fa-bars" id="menu-btn"></div>
+</div> 
+
 <div class="search-form">
-  <input type="search" id="search-box">
-  <label for="search-box" class="fas fa-search"></label>
+<input type="search" id="search-box">
+<label for="search-box" class="fas fa-search"></label>
 </div>
 
+<script src="/Coffee_House/JS/Script.js"></script>
 </body>
 </html>
