--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -21,7 +21,7 @@
   <nav class="navbar">
       <a href="Coffee_House.html">home</a>
       <a href="#about">about</a>
-      <a href="#menu-section">menu</a>
+      <a href="/Coffee_House/Coffee_House.html#menu-section">menu</a>
       <a href="#products">products</a>
       <a href="#contact">contact</a>
      
