--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="box" id="div2">
-    <img src="/Coffee_House/Images/caramel macchiato.jpg" alt="" width="100px" height="100px">
+    <img src="/Coffee_House/Images/caramel-macchiato.jpg" alt="" width="100px" height="100px">
     <h3> CARAMEL MACCHIATO </h3>
     <h3>$3.99</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -78,7 +78,7 @@
   </div>
 
   <div class="box" id="div3">
-    <img src="/Coffee_House/Images/Iced-Spanish-Latte.png" alt="" width="100px" height="100px">
+    <img src="/Coffee_House/Images/Iced-Spanish-Latte.jpg" alt="" width="100px" height="100px">
     <h3> ICED SPANISH LATTE</h3>
     <h3>$3.99</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -103,7 +103,7 @@
   </div>
 
   <div class="box" id="div6">
-    <img src="/Coffee_House/Images/white mocha.jpg" alt="" width="100px" height="100px">
+    <img src="/Coffee_House/Images/white-mocha.jpg alt="" width="100px" height="100px">
     <h3> WHITE MOCHA </h3>
     <h3>$3.99</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -116,6 +116,7 @@
 
 
 <script src="JS/Script.js"></script>
-
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
