--- a/Coffee_House/cart.html
+++ b/Coffee_House/cart.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping cart</title>
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="/Coffee_House/CSS/Style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
 
 </head>
 <body>
-    <header class="header">
+
+<header class="header">
 
   <a href="Coffee_House.html" class="logo">
       <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
@@ -20,7 +22,7 @@
   <nav class="navbar">
       <a href="Coffee_House.html">home</a>
       <a href="#about">about</a>
-      <a href="#menu-section">menu</a>
+      <a href="/Coffee_House/Coffee_House.html#menu-section">menu</a>
       <a href="#products">products</a>
       <a href="#contact">contact</a>
      
@@ -45,7 +47,23 @@
 <input type="search" id="search-box">
 <label for="search-box" class="fas fa-search"></label>
 </div>
+</header>
+
+<div class="products-container">
+    <div class="product-header">
+      <h5 class="title"> PRODUCT</h5>
+      <h5 class="price"> PRICE</h5>
+      <h5 class="quantity"> QUANTITY</h5>
+      <h5 class="total"> TOTAL</h5>
+    </div>
+    <div class="products">
+
+    </div>
+</div>
+
 
 <script src="/Coffee_House/JS/Script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
