--- a/media test.html
+++ b/media test.html
@@ -8,31 +8,29 @@
     <style>
     .header{
     background: black;
-    display: flex;
+    display: inline-block;
     align-items: center;
-    justify-content: space-between;
-    padding:1.5rem 7%;
-    border-bottom: var(--border);
-    position: relative;
-    top:0; left: 0; right: 0;
-    z-index: 1000
 }
 
 
 
 .header .navbar a{
-    margin:0 1rem;
     font-size: 1.6rem;
-    color:#fff;
+    color:white;
 }
 
 .header .navbar a:hover{
-    color:silver;
-    border-bottom: .1rem solid var(--main-color);
-    padding-bottom: .5rem;
+background-color:silver;
+   
 }
 @media (max-width:480px){
-    
+.header .navbar a{
+    display: block;
+    padding: 1em 1em;
+    text-align: center;
+    text-decoration: none;
+
+}
 }
     </style>
 </head>
