--- a/Coffee_House/cart.html
+++ b/Coffee_House/cart.html
@@ -11,15 +11,15 @@
     
 
 </head>
-<body>
+<body class="cart-body">
 
-<header class="header">
+<header class="cart-header">
 
   <a href="Coffee_House.html" class="logo">
       <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
   </a>
 
-  <nav class="navbar">
+  <nav class="cart-navbar">
       <a href="Coffee_House.html">home</a>
       <a href="#about">about</a>
       <a href="/Coffee_House/Coffee_House.html#menu-section">menu</a>
