--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -103,7 +103,7 @@
   </div>
 
   <div class="box" id="div6">
-    <img src="/Coffee_House/Images/white-mocha_2.jpg alt="" width="100px" height="100px">
+    <img src="/Coffee_House/Images/white-mocha-3.jpg"" width="px" height="px">
     <h3> WHITE MOCHA </h3>
     <h3>$3.99</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
