--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -50,8 +50,8 @@
 </header> 
 <section class="home-page">
   <div class="content">
-    <h3>THE FRESHEST COFFEE IN TWON </h3>
-    <a href="#" class="btn"> get yours now </a>
+    <h3>THE FRESHEST COFFEE IN TOWN </h3>
+    <a href="#menu-section" class="btn"> get yours now </a>
   </div>
 
 </section>
