--- a/Coffee_House/cart.html
+++ b/Coffee_House/cart.html
@@ -11,15 +11,15 @@
     
 
 </head>
-<body class="cart-body">
+<body class="body">
 
-<header class="cart-header">
+<header class="header">
 
   <a href="Coffee_House.html" class="logo">
       <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
   </a>
 
-  <nav class="cart-navbar">
+  <nav class="navbar">
       <a href="Coffee_House.html">home</a>
       <a href="#about">about</a>
       <a href="/Coffee_House/Coffee_House.html#menu-section">menu</a>
@@ -48,18 +48,19 @@
 <label for="search-box" class="fas fa-search"></label>
 </div>
 </header>
-
-<div class="products-container">
+<font color ="white" >
+  <div class="products-container">
     <div class="product-header">
-      <h5 class="title"> PRODUCT</h5>
+      <h5 class="product-title"> PRODUCT</h5>
       <h5 class="price"> PRICE</h5>
       <h5 class="quantity"> QUANTITY</h5>
       <h5 class="total"> TOTAL</h5>
     </div>
+</font>
     <div class="products">
 
     </div>
-</div>
+  </div>
 
 
 <script src="/Coffee_House/JS/Script.js"></script>
