--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -14,7 +14,7 @@
  
 <header class="header">
 
-  <a href="#" class="logo">
+  <a href="/Coffee_House/Coffee_House.html" class="logo">
       <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
   </a>
 
