--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -47,6 +47,34 @@
       </div>
       </header>
 
+      <section class="CheckOut"> 
+        <div class="Fname">
+            First Name:<input type="text" name = "First-Name">
+            
+        </div>
+        <br><br>
+        <div class="Lname">
+            Last Name:<input type="text " name = "Last-Name">
+        </div>
+        <br><br>
+        <div class="Email">
+            E-mail:<input type="text" name = "E-mail" >
+        </div>
+        <br><br>
+        <div class="phone">
+            phone number:<select name="countryCode" id="countryCode">
+                <option class="madii" data-countryCode="JO" value="962">Jordan (+962)</option> 
+                    <input class="madii" type="text">
+                </optgroup>
+                <br><br>
+            </div>
+                <div class="address">
+                    Address: <input type="text" name="address">
+                </div>
+            </select>
+        </div>
+      </section>
+
 
       
 
