--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
-<body>
+<body> 
     <header class="header">
 
         <a href="Coffee_House.html" class="logo">
@@ -46,19 +46,21 @@
       <label for="search-box" class="fas fa-search"></label>
       </div>
       </header>
+ <section class="check-out-body">
 
+    <form action="/action_page.php">
       <section class="CheckOut"> 
         <div class="Fname">
-            First Name:<input type="text" name = "First-Name">
+            First Name:<input  type="text" name = "First-Name">
             
         </div>
         <br><br>
         <div class="Lname">
-            Last Name:<input type="text " name = "Last-Name">
+            Last Name:<input  type="text " name = "Last-Name">
         </div>
         <br><br>
         <div class="Email">
-            E-mail:<input type="text" name = "E-mail" >
+            E-mail:<input type="text"  name = "E-mail" >
         </div>
         <br><br>
         <div class="phone">
@@ -69,13 +71,14 @@
                 <br><br>
             </div>
                 <div class="address">
-                    Address: <input type="text" name="address">
+                    Address: <input type="text" " name="address">
                 </div>
             </select>
         </div>
-        <input class="check-out-btn" type="submit">
+        <button class="check-out-btn-1" type="submit"> Submit & chechk out</button>
       </section>
-
+    </form>
+</section>
 
       
 
