--- a/phonetest.html
+++ b/phonetest.html
@@ -1,25 +1,16 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #countryCode{
-            margin-left: 10px;
-            border: none;
-        }
-        .madii{
-            margin-left: 10px;
-        }
-    </style>
-</head>
+<html>
 <body>
-    phone number:<select name="countryCode" id="countryCode">
-        <option class="madii" data-countryCode="JO" value="962">Jordan (+962)</option> 
-            <input class="madii" type="text">
-        </optgroup>
-    </select>
+
+<h1>Display a Telephone Input Field</h1>
+
+
+  <label for="phone">Enter a phone number:</label><br><br>
+  <input type="tel" id="phone" name="phone" placeholder="123-45-678" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
+  <small>Format: 123-45-678</small><br><br>
+  <input type="submit">
+
+
 </body>
 </html>
