--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -51,18 +51,18 @@
     <form action="/Coffee_House/check-out.html">
       <section class="CheckOut"> 
         <div class="Fname">
-            First Name:<input  type="text" name = "First-Name" required> </div>
+            First Name:<input  type="text" name = "First-Name"  placeholder="Jhon"required> </div>
         <br><br>
         <div class="Lname">
-            Last Name:<input  type="text " name = "Last-Name" required>
+            Last Name:<input  type="text " name = "Last-Name" placeholder="Doh" required>
         </div>
         <br><br>
         <div class="Email">
-            E-mail:<input type="text"  name = "E-mail" required >
+            E-mail:<input type="text"  name = "E-mail" placeholder="abc.123@outlook.com" required >
         </div>
         <br><br>
         <div class="phone">
-           Phone Number <input type="tel" name="phone"  value="+962   " placeholder="123-45-678" pattern="[0-9]{3} [0-9]{3} [0-9]{4}" required>
+           Phone Number <input type="tel" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                 
                 <br><br>
             </div>
