--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -67,11 +67,14 @@
                 <br><br>
             </div>
                 <div class="address">
-                    Address: <input type="text" name="address"  required>
+                    <label for="address">address</label>
+                    <textarea id="address" name="subject" placeholder="Write something.." required></textarea>
                 </div>
+               
+                
             </select>
         </div>
-        <button class="check-out-btn-1" type="submit"> Submit & chechk out</button>
+        <button class="check-out-btn-1" type="submit" onclick="ThankYou()"> Submit & chechk out</button>
       </section>
     </form>
 </section>
