--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -22,7 +22,7 @@
             <a href="#about">about</a>
             <a href="/Coffee_House/Coffee_House.html#menu-section">menu</a>
             <a href="#products">products</a>
-            <a href="#contact">contact</a>
+            <a href="/Coffee_House/Coffee_House.html#footer">contact</a>
            
         </nav>
       
