--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -62,7 +62,7 @@
         </div>
         <br><br>
         <div class="phone">
-           Phone Number <input type="tel" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+           Phone Number: <input type="tel" name="phone" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
                 
                 <br><br>
             </div>
