--- a/Coffee_House/cart.html
+++ b/Coffee_House/cart.html
@@ -56,10 +56,11 @@
       <h5 class="quantity"> QUANTITY</h5>
       <h5 class="total"> TOTAL</h5>
     </div>
-</font>
+    </font>
     <div class="products">
       
     </div>
+  </div>
     <section class="footer">
       <div class="cont">
       <a href="https://github.com/Madii-01/HTU-Website-Madii/tree/main/Coffee_House" target="_blank"  ><ion-icon name="logo-github"></ion-icon></a>
