--- a/InClass/index4.html
+++ b/InClass/index4.html
@@ -58,7 +58,7 @@
 
             </p>
 
-            <a id="you" class="youtube" href="https://www.w3schools.com/jsref/obj_event.asp"> youtube </a>
+            <a id="you" class="youtube" target="_blank" href="https://www.w3schools.com/jsref/obj_event.asp"> youtube </a>
 
             <a class="facebook" href=""> facebook </a>
           </article>
