--- a/Coffee_House/Coffee_House.html
+++ b/Coffee_House/Coffee_House.html
@@ -14,16 +14,16 @@
  
 <header class="header">
 
-  <a href="/Coffee_House/Coffee_House.html" class="logo">
+  <a href="Coffee_House.html" class="logo">
       <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
   </a>
 
   <nav class="navbar">
       <a href="Coffee_House.html">home</a>
       <a href="#about">about</a>
-      <a href="/Coffee_House/Coffee_House.html#menu-section" >menu</a>
+      <a href="Coffee_House.html#menu-section" >menu</a>
       <a href="#products">products</a>
-      <a href="/Coffee_House/Coffee_House.html#footer">contact</a>
+      <a href="Coffee_House.html#footer">contact</a>
      
   </nav>
 
