--- a/Coffee_House/cart.html
+++ b/Coffee_House/cart.html
@@ -75,7 +75,7 @@
  
 
 
-<script src="/Coffee_House/JS/Script.js"></script>
+<script src="JS/Script.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
