--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ckeck-out</title>
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
-    <link rel="stylesheet" href="/Coffee_House/CSS/Style.css">
+    <link rel="stylesheet" href="CSS/Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
@@ -20,9 +20,9 @@
         <nav class="navbar">
             <a href="Coffee_House.html">home</a>
             <a href="#about">about</a>
-            <a href="/Coffee_House/Coffee_House.html#menu-section">menu</a>
+            <a href="Coffee_House.html#menu-section">menu</a>
             <a href="#products">products</a>
-            <a href="/Coffee_House/Coffee_House.html#footer">contact</a>
+            <a href="Coffee_House.html#footer">contact</a>
            
         </nav>
       
@@ -142,7 +142,7 @@
 
 
 
-      <script src="/Coffee_House/JS/Script.js"></script>
+      <script src="JS/Script.js"></script>
       <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
