--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -19,11 +19,11 @@
   </a>
 
   <nav class="navbar">
-      <a href="Coffee_House.html">home</a>
+      <a href="index.html">home</a>
       <a href="#about">about</a>
-      <a href="Coffee_House.html#menu-section" >menu</a>
+      <a href="index.html#menu-section" >menu</a>
       <a href="#products">products</a>
-      <a href="Coffee_House.html#footer">contact</a>
+      <a href="index.html#footer">contact</a>
      
   </nav>
 
