--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar">
       <a href="index.html">home</a>
       <a href="#about">about</a>
-      <a href="index.html#menu-section" >menu</a>
+      <a href="#menu-section" >menu</a>
       <a href="#products">products</a>
       <a href="index.html#footer">contact</a>
      
