--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -15,7 +15,7 @@
 <header class="header">
 
   <a href="Coffee_House.html" class="logo">
-      <img src="Images/Logo.jpg" alt="logo" width="100px" height="100px">
+      <img src="Images/teams.png" alt="logo" width="100px" height="100px">
   </a>
 
   <nav class="navbar">
