--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -21,8 +21,7 @@
   <nav class="navbar">
       <a href="index.html">home</a>
       <a href="#about">about</a>
-      <a href="#menu-section" >menu</a>
-      <a href="#products">products</a>
+      <a href="#index.htmlproducts">products</a>
       <a href="index.html#footer">contact</a>
      
   </nav>
@@ -34,7 +33,7 @@
     </a>
   
     <div class="cart"> 
-      <a href="cart.html" target="blank">
+      <a id="cart" href="cart.html" target="blank">
       <div class="fas fa-shopping-cart" id="cart-btn"></div>
       <span>0</span>
       </a>
