--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width-device-width, initial-sacle=1.0">
     <title> Madii's Coffee House </title>
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
-<link rel="stylesheet" href="CSS/Style.css">
+<link rel="stylesheet" href="Coffee_House/CSS/Style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
