--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width-device-width, initial-sacle=1.0">
     <title> Madii's Coffee House </title>
     <link rel="icon" type="image/png" href="Images/Logo.jpg">
-<link rel="stylesheet" href="Coffee_House/CSS/Style.css">
+<link rel="stylesheet" href="CSS/Style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
@@ -14,7 +14,7 @@
  
 <header class="header">
 
-  <a href="Coffee_House.html" class="logo">
+  <a href="index.html" class="logo">
       <img src="Images/teams.png" alt="logo" width="166px" height="166px">
   </a>
 
@@ -50,7 +50,10 @@
 
 
 <section class="home-page">
+
+
   <div class="content">
+   
     <h3>THE FRESHEST COFFEE IN TOWN </h3>
     <a href="#menu-section" class="btn"> get yours now </a>
   </div>
@@ -63,7 +66,7 @@
 
 <div class = "box-contanier">
   <div class="box" id="div1">
-    <img src="/Coffee_House/Images/americancoffee.jpg" alt="" width="100px" height="100px">
+    <img src="Images/americancoffee.jpg" alt="" width="100px" height="100px">
     <h3> AMERICAN COFFEE </h3>
     <h3>$2</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -71,7 +74,7 @@
   </div>
 
   <div class="box" id="div2">
-    <img src="/Coffee_House/Images/caramelmacchiato.jpg" alt="" width="100px" height="100px">
+    <img src="Images/caramelmacchiato.jpg" alt="" width="100px" height="100px">
     <h3> CARAMEL MACCHIATO </h3>
     <h3>$3</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -79,7 +82,7 @@
   </div>
 
   <div class="box" id="div3">
-    <img src="/Coffee_House/Images/icedspanishlatte.jpg" alt="" width="100px" height="100px">
+    <img src="Images/icedspanishlatte.jpg" alt="" width="100px" height="100px">
     <h3> ICED SPANISH LATTE</h3>
     <h3>$3</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -88,7 +91,7 @@
   </div>
 
   <div class="box" id="div4">
-    <img src="/Coffee_House/Images/spanishlatte.jpg" alt="" width="100px" height="100px">
+    <img src="Images/spanishlatte.jpg" alt="" width="100px" height="100px">
     <h3> SPANISH LATTE </h3>
     <h3>$3</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -96,7 +99,7 @@
   </div>
 
   <div class="box" id="div5">
-    <img src="/Coffee_House/Images/turkishcoffee.jpg" alt="" width="100px" height="100px">
+    <img src="Images/turkishcoffee.jpg" alt="" width="100px" height="100px">
     <h3> TURKISH COFFEE </h3>
     <h3>$3</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -104,7 +107,7 @@
   </div>
 
   <div class="box" id="div6">
-    <img src="/Coffee_House/Images/whitemocha.jpg"" width="px" height="px">
+    <img src="Images/whitemocha.jpg"" width="px" height="px">
     <h3> WHITE MOCHA </h3>
     <h3>$3</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -116,7 +119,7 @@
 
 
 
-<section class="footer">
+<section class="footer" id="footer">
   <div class="cont">
   <a href="https://github.com/Madii-01/HTU-Website-Madii/tree/main/Coffee_House" target="_blank"  ><ion-icon name="logo-github"></ion-icon></a>
   <a href="https://www.linkedin.com/in/abed-al-qader-madi-97836b210/" target="_blank"> <ion-icon name="logo-linkedin"></ion-icon> </a>
