--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -107,7 +107,7 @@
   </div>
 
   <div class="box" id="div6">
-    <img src="Images/whitemocha.jpg"" width="px" height="px">
+    <img src="Images/whitemocha.jpg" >
     <h3> WHITE MOCHA </h3>
     <h3>$3</h3>
     <a href="#menu-section" class="add-btn">ADD TO CART</a>
@@ -121,7 +121,7 @@
 
 <section class="footer" id="footer">
   <div class="cont">
-  <a href="https://github.com/Madii-01/HTU-Website-Madii/tree/main/Coffee_House" target="_blank"  ><ion-icon name="logo-github"></ion-icon></a>
+  <a href="https://github.com/shathaali89/WebsiteDesign2021-S2-abed-al-qader20110103/tree/main/Coffee_House" target="_blank"  ><ion-icon name="logo-github"></ion-icon></a>
   <a href="https://www.linkedin.com/in/abed-al-qader-madi-97836b210/" target="_blank"> <ion-icon name="logo-linkedin"></ion-icon> </a>
   <div class="credit"> Done by <span>	&copy; Abed Al Qader Madi</span> | all rights are reserved</div>
   </div>
