--- a/Coffee_House/index.html
+++ b/Coffee_House/index.html
@@ -23,7 +23,7 @@
       <a href="#about">about</a>
       <a href="index.html#menu-section">products</a>
       <a href="index.html#footer">contact</a>
-      <a href="employee.html">employess</a>
+      <a href="employee.php">employess</a>
      
   </nav>
 
