--- a/Coffee_House/check-out.html
+++ b/Coffee_House/check-out.html
@@ -49,7 +49,7 @@
       <div class="home">
           
         <div class = "wrapper">
-            <form action="/Coffee_House/check-out.html">
+            <form>
             <h2>Payment Form</h2>
            
                 <h4>Account</h4>
